package org.game.protobuf.s2c;

option java_outer_classname = "S2CMailMsg";
import "S2C/S2CShareMsg.proto";


// 邮件操作
// code = 769
message RespOperation{
	enum MsgID{eMsgID = 769;}; //注意：消息id放最后,以免客户端解析异常
}

// 邮件列表
// code = 772
message MailInfoList {
	repeated MailInfo mails = 1;
	enum MsgID{eMsgID = 772;}; //注意：消息id放最后,以免客户端解析异常
}

// 邮件
message MailInfo {
	required ChangeType ct = 1;
	required string id = 2; 			// 邮件ID
	required int32 senderId = 3; 		// 发送者id
	required string senderName = 4; 	// 发送者名字
	required int32 createTime = 5; 	// 创建时间
	required int32 modifiedTime = 6; // 邮件时间
	required int32 status = 7; 		// 状态
	optional string title = 8; 		// 邮件标题
	optional string body = 9; 		// 邮件正文
	repeated RewardsMsg rewards = 10;  // 附件
}
